<resources>

    <!--    Main Activity-->
    <string name="app_name">SleepingBaby</string>//
    <string name="start_button">Start</string>//
    <string name="settings">Settings</string>//
    <string name="exit">Stop</string>//

    <!--  Preferences -->
    <string name="time_title">Minutes you should spend with your child</string>
    <string name="day_title">Day of therapy</string>
    <string name="listening_title">Detection of crying (sound detection)</string>
    <string name="reset_title">Start therapy again (reset all data)</string>
    <string name="time_child">Change time spent with child</string>
    <string name="restart_progress">Restart progress</string>
    <string name="set_day">Set day</string>
    <string name="title_activity_settings">Settings</string>

    <!--    MainService-->
    <string name="information_cry">Click when child start crying</string>
    <string name="information_no_cry">Click when child stop crying</string>
    <string name="information_with_baby">Spend time with child</string>
    <string name="button_cry">Child\nCry</string>
    <string name="button_no_cry">Child\nStopped\nCrying</string>
    <string name="information_go_baby">Go to your baby</string>
    <string name="stop_vibrating">Stop vibrating</string>
    <string name="information_leave_baby">Leave baby</string>

    <string name="go_child">Go to child.</string>
    <string name="leave_child">Time is up! Leave child.</string>
    <string name="foreground_info">Listening in background.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
